Este Commit ya permite el ingreso y egreso de usuarios al estacionamiento, falta solucionar la salida de usuarios con RFID y que la base de datos unicamente permite guardar en acceso un ingreso y una salida para llevar el conteo.